--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "mongoose": "^5.4.5",
+    "lodash": "^4.17.19",
+    "mongoose": "^5.9.25",
     "mongoose-findorcreate": "^3.0.0",
     "package-lock.json": "^1.0.0",
     "passport": "^0.4.0",
